completed lists for the 100th time

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "description": "Code exercise solutions.",
   "main": "",
-  "scripts": {
-  },
+  "scripts": {},
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
